--- a/css/main.css
+++ b/css/main.css
@@ -1,183 +1,192 @@
-/*
-#2196F3 синий
-#757575 ссылка
-#212121 чёрный
-#757575 вторичный текст
-rgba(255, 255, 255, 0.6); футер ссылки
-#F5F4FA цвет фона вторичный
-#2F303A цвет футера */
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
 }
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --primary-white-color: #ffffff;
-}
+
 body {
   font-family: "Roboto", sans-serif;
-  color: var(--primary-text-color);
+  color: #757575;
 }
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
+
 button {
   cursor: pointer;
 }
+
 .list {
   list-style: none;
 }
+
 .link {
   text-decoration: none;
-  color: var(--primary-text-color);
+  color: #757575;
 }
+
+:hover,
+:focus {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+}
+
 .conteiner {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: auto;
 }
-:hover,
-:focus {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
-}
+
 /*----------header----------*/
 .header {
   background-color: #fff;
 }
+
 .heder-content {
   display: flex;
 }
+
 .navigation {
   margin-right: auto;
 }
+
 .link-logotipe {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  color: #212121;
   padding-top: 24px;
   padding-bottom: 25px;
   margin-right: 93px;
 }
+
 .part-logotipe {
-  color: var(--accent-color);
+  color: #2196f3;
 }
+
 .link-header {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.333;
   letter-spacing: 0.02em;
-  color: var(--title-text-color);
+  color: #212121;
 }
+
 .link-header:hover,
 .link-header:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
+
 .header-list-item .current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
+
 .current:after {
   content: "";
   display: block;
   margin-top: 28px;
-  border-bottom: 4px solid var(--accent-color);
+  border-bottom: 4px solid #2196f3;
   border-radius: 2px;
-  /* width: 100%; */
 }
+
 .header-list {
   display: flex;
   padding-top: 32px;
-  /* padding-bottom: 32px; */
 }
+
 .header-list-item:not(:last-child) {
   margin-right: 50px;
 }
+
 .connect-header {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.333;
   letter-spacing: 0.02em;
-  color: var(--primary-text-color);
+  color: #757575;
 }
+
 .connect-header:hover,
 .connect-header:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
+
 .header-adress {
   display: flex;
   justify-content: flex-end;
   padding-top: 32px;
   padding-bottom: 32px;
 }
+
 .address-list-item:not(:last-child) {
   margin-right: 50px;
 }
+
 .icon-address-list {
   fill: currentColor;
   margin-right: 10px;
 }
+
 /*----------hero----------*/
 .hero-section {
   max-width: 1600px;
   height: 600px;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../image/hero/hero.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/hero/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   margin: 0 auto;
   display: flex;
 }
+
 .hero-block {
   text-align: center;
   width: 696px;
   margin: 0 auto;
 }
+
 .hero-title {
   font-weight: 700;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
-  color: var(--primary-white-color);
+  color: #ffffff;
   text-transform: uppercase;
   margin: 0;
   margin-bottom: 30px;
 }
+
 .hero-btn {
   width: 200px;
   height: 50px;
-  background: var(--accent-color);
+  background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   outline: none;
 }
+
 .text-btn {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
+
 /*----------Advantages----------*/
 .advantages-title {
   position: absolute !important;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
   padding: 0 !important;
   border: 0 !important;
@@ -185,11 +194,13 @@ button {
   width: 1px !important;
   overflow: hidden;
 }
+
 .advantages-list {
   display: flex;
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
 .advantages-list-item::before {
   display: block;
   content: "";
@@ -201,37 +212,45 @@ button {
   border-radius: 4px;
   margin-bottom: 30px;
 }
+
 .icon-first::before {
   background-image: url(../svg/advantages-svg/Group.svg);
 }
+
 .icon-second:before {
   background-image: url(../svg/advantages-svg/clock.svg);
 }
+
 .icon-third:before {
   background-image: url(../svg/advantages-svg/diagram.svg);
 }
+
 .icon-fourth:before {
   background-image: url(../svg/advantages-svg/astronaut.svg);
 }
+
 .advantages-list-item:not(:last-child) {
   margin-right: 30px;
 }
+
 .list-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  color: #212121;
   text-transform: uppercase;
   margin: 0;
   margin-bottom: 10px;
 }
+
 .list-deskription {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+
 /*----------What we are doing----------*/
 .section-title {
   font-weight: 700;
@@ -239,22 +258,26 @@ button {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  color: #212121;
   margin: 0;
   margin-bottom: 50px;
   padding-top: 94px;
 }
+
 .doing-list {
   padding-bottom: 94px;
   display: flex;
 }
+
 .doing-list-item {
   width: 370px;
   height: 294px;
 }
+
 .doing-list-item:not(:last-child) {
   margin-right: 30px;
 }
+
 .doing-text-link {
   font-weight: 700;
   font-size: 14px;
@@ -271,31 +294,36 @@ button {
 .link-block {
   position: relative;
 }
+
 .link-block .doing-text-link {
   position: absolute;
   bottom: 0;
   margin: 0;
   width: 100%;
 }
+
 /*----------our comand----------*/
 .comand-section {
   background-color: #f5f4fa;
 }
+
 .comand-list {
   display: flex;
   padding-bottom: 94px;
 }
+
 .name-title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  color: #212121;
   margin: 0;
   margin-top: 30px;
   margin-bottom: 10px;
 }
+
 .profession {
   font-weight: 400;
   font-size: 16px;
@@ -305,22 +333,25 @@ button {
   margin: 0;
   margin-bottom: 16px;
 }
+
 .comand-list-item {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   /* height: 368px; */
   width: 270px;
 }
+
 .comand-list-item:not(:last-child) {
   margin-right: 30px;
 }
+
 .social-list {
   display: flex;
   justify-content: space-between;
   padding-bottom: 30px;
   margin: 0 30px;
 }
+
 .social-list-link {
   display: flex;
   justify-content: center;
@@ -331,22 +362,27 @@ button {
   border-radius: 50%;
   color: #afb1b8;
 }
+
 .social-list-link:hover,
 .social-list-link:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196f3;
 }
+
 .icon-social {
   fill: currentColor;
 }
+
 /* ----------Regular clients---------- */
 .clients-list {
   display: flex;
   padding-bottom: 94px;
 }
+
 .clients-list-item:not(:last-child) {
   margin-right: 30px;
 }
+
 .clients-list-link {
   display: inline-block;
   width: 170px;
@@ -359,45 +395,245 @@ button {
   align-items: center;
   color: #afb1b8;
 }
+
 .clients-list-link:hover,
 .clients-list-link:focus {
-  color: var(--accent-color);
-  border-color: var(--accent-color);
+  color: #2196f3;
+  border-color: #2196f3;
 }
+
 .icon-clients {
   fill: currentColor;
+}
+
+/*----------beackdrop----------*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  transition: all 0.8s ease 0s;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+  transition: 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.btn-backdrop {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  box-sizing: border-box;
+  outline: none;
+}
+
+.btn-backdrop:focus,
+.btn-backdrop:hover {
+  color: #2196f3;
+}
+
+.icon-backdrop {
+  width: 11px;
+  height: 11px;
+}
+
+.icon-backdrop:hover,
+.icon-backdrop:focus {
+  fill: currentColor;
+}
+
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding-top: 40px;
+  margin-bottom: 30px;
+}
+
+.modal-label {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.67;
+  letter-spacing: 0.01em;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding-left: 42px;
+  outline: none;
+}
+
+.modal-input:focus,
+.modal-input:hover {
+  border-color: #2196f3;
+}
+
+.modal-input:focus ~ .icon-modal,
+.modal-input:hover ~ .icon-modal {
+  fill: #2196f3;
+}
+
+.modal-text {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  resize: none;
+  padding: 12px 16px;
+  outline: none;
+}
+
+.modal-text:focus,
+.modal-text:hover {
+  border-color: #2196f3;
+}
+
+.modal-link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.input-chekbox:focus ~ .modal-link,
+.input-chekbox:hover ~ .modal-link {
+  color: #2196f3;
+}
+
+.checkbox {
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.input-checkbox:checked + .checkbox::before {
+  background-color: #2196f3;
+}
+
+.checkbox::before {
+  display: block;
+  content: "";
+  width: 16px;
+  height: 15px;
+  background-color: #ffffff;
+  border: 1px solid #2196f3;
+  border-radius: 2px;
+  margin-right: 7px;
+}
+
+.icon-checkbox {
+  position: absolute;
+  top: 7px;
+  left: 2px;
+  fill: #ffffff;
+}
+
+.is-hiden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+.icon-modal {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+}
+
+.modal-box {
+  position: relative;
+  margin-bottom: 28px;
+  margin-left: 41px;
+  margin-right: 39px;
+}
+
+.modal-end-block {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 40px;
 }
 
 /*----------footer----------*/
 .footer {
   background-color: #2f303a;
 }
+
 .link-logotipe-footer {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  color: #212121;
   padding-top: 60px;
   margin-bottom: 20px;
 }
+
 .footer-logo {
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
+
 .footer-block {
   display: flex;
 }
+
 .address-footer {
   display: flex;
   flex-direction: column;
 }
+
 .footer-list-item:not(:last-child) {
   margin-bottom: 9px;
 }
+
 .footer-list-item:last-child {
   padding-bottom: 60px;
 }
+
 .connect-footer {
   font-weight: 400;
   font-size: 14px;
@@ -405,6 +641,7 @@ button {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+
 .adress {
   font-weight: 400;
   font-size: 14px;
@@ -412,23 +649,27 @@ button {
   letter-spacing: 0.03em;
   color: #ffffff;
 }
+
 .footer-list-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: #ffffff;
   margin-bottom: 20px;
   padding-top: 72px;
 }
+
 .join {
   padding-bottom: 100px;
   margin-left: 70px;
 }
+
 .footer-social-list {
   display: flex;
 }
+
 .footer-social-list-link {
   display: flex;
   justify-content: center;
@@ -439,19 +680,24 @@ button {
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
 }
+
 .footer-social-list-item:not(:last-child) {
   margin-right: 10px;
 }
+
 .footer-social-list-link:hover,
 .footer-social-list-link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
+
 .icon-footer-social {
-  fill: var(--primary-white-color);
+  fill: #ffffff;
 }
+
 .mailing-btn {
   margin-left: 93px;
 }
+
 .mailing-mesage {
   width: 358px;
   height: 50px;
@@ -463,290 +709,18 @@ button {
   background: rgba(255, 255, 255, 0.1);
   padding-left: 16px;
   padding-top: 15px;
-  color: var(--primary-white-color);
+  color: #ffffff;
   margin-right: 12px;
 }
+
 .icon-footer-btn {
   width: 24px;
   height: 24px;
-  fill: var(--primary-white-color);
+  fill: #ffffff;
   margin-left: 10px;
 }
+
 .position-footer-btn {
   position: absolute;
 }
-/*----------Portfolio----------*/
-.portfolio {
-  border: 1px solid #ececec;
-}
-.buttom-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 94px;
-  padding-bottom: 50px;
-}
-.buttom-list-item:not(:last-child) {
-  margin: 8px;
-}
-.btn-portfolio {
-  background: #f5f4fa;
-  border-radius: 4px;
-  border: none;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
-  padding: 6px 22px;
-}
-.btn-portfolio:hover,
-.btn-portfolio:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-}
-/*----------cards----------*/
-.potfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-.portfolio-list-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-.portfolio-list-item:nth-last-child(-n + 3) {
-  margin-bottom: 94px;
-}
-.portfolio-list-item:not(:nth-child(-n + 3)) {
-  margin-top: 30px;
-}
-.portfolio-list-item {
-  width: 370px;
-  height: 404px;
-}
-.portfolio-list-item:hover,
-.portfolio-list-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.portfolio-border {
-  background: #ffffff;
-  border: 1px solid #eeeeee;
-  padding-left: 24px;
-  padding-bottom: 20px;
-  border-top: none;
-}
-.portfolio-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--title-text-color);
-  margin: 0;
-  padding-top: 20px;
-  margin-bottom: 4px;
-}
-.portfolio-deskription {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-}
-.overlay-text {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  color: var(--primary-white-color);
-}
-.cards-block {
-  position: relative;
-  overflow: hidden;
-}
-.cards-block:hover .overlay {
-  transform: translatex(0);
-}
-.overlay {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  padding: 0 24px;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--accent-color);
-  transform: translateY(100%);
-  transition: 250ms ease;
-}
-/*----------beackdrop----------*/
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-  transition: all 0.8s ease 0s;
-}
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.1);
-}
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 528px;
-  min-height: 581px;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  transform: translate(-50%, -50%) scale(1);
-  transition: 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
-}
-.btn-backdrop {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background: var(--primary-white-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  box-sizing: border-box;
-  outline: none;
-}
-.btn-backdrop:focus,
-.btn-backdrop:hover {
-  color: var(--accent-color);
-}
-/* .btn-backdrop:hover ~ .icon-backdrop,
-.btn-backdrop:focus ~ .icon-backdrop {
-  fill: currentColor;
-} */
-.icon-backdrop {
-  width: 11px;
-  height: 11px;
-}
-.icon-backdrop:hover,
-.icon-backdrop:focus {
-  fill: currentColor;
-}
-.modal-title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
-  padding-top: 40px;
-  margin-bottom: 30px;
-}
-.modal-label {
-  position: absolute;
-  top: -20px;
-  left: 0;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.67;
-  letter-spacing: 0.01em;
-}
-.modal-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding-left: 42px;
-  outline: none;
-}
-.modal-input:focus,
-.modal-input:hover {
-  border-color: var(--accent-color);
-}
-.modal-input:focus ~ .icon-modal,
-.modal-input:hover ~ .icon-modal {
-  fill: var(--accent-color);
-}
-.modal-text {
-  width: 100%;
-  height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  resize: none;
-  padding: 12px 16px;
-  outline: none;
-}
-.modal-text:focus,
-.modal-text:hover {
-  border-color: var(--accent-color);
-}
-.modal-link {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
-.input-chekbox:focus ~ .modal-link,
-.input-chekbox:hover ~ .modal-link {
-  color: var(--accent-color);
-}
-.checkbox {
-  text-align: center;
-  display: flex;
-  align-items: center;
-}
-.input-checkbox:checked + .checkbox::before {
-  background-color: var(--accent-color);
-}
-.checkbox::before {
-  display: block;
-  content: "";
-  width: 16px;
-  height: 15px;
-  background-color: var(--primary-white-color);
-  border: 1px solid #2196F3;
-  border-radius: 2px;
-  margin-right: 7px;
-}
-.icon-checkbox {
-  position: absolute;
-  top: 7px;
-  left: 2px;
-  fill: var(--primary-white-color);
-}
-.is-hiden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
-.icon-modal {
-  position: absolute;
-  top: 50%;
-  left: 15px;
-  transform: translateY(-50%);
-}
-.modal-box {
-  position: relative;
-  margin-bottom: 28px;
-  margin-left: 41px;
-  margin-right: 39px;
-}
-.modal-end-block {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 40px;
-}
+/*# sourceMappingURL=main.css.map */
