--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,44 +2,26 @@
 .header {
   background-color: #fff;
 }
-.heder-content {
+.header-content {
   display: flex;
+  justify-content: start;
 }
 .navigation {
   margin-right: auto;
 }
-.link-logotipe {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.192;
-  letter-spacing: 0.03em;
-  color: $title-text-color;
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 93px;
-}
 .part-logotipe {
-  color: $accent-color;
-}
-.link-header {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.333;
-  letter-spacing: 0.02em;
-  color: $title-text-color;
-}
-.link-header:hover,
-.link-header:focus {
   color: $accent-color;
 }
 .header-list-item .current {
   color: $accent-color;
 }
+.header-list-item:not(:last-child) {
+  margin-right: 50px;
+}
 .current:after {
   content: "";
   display: block;
-  margin-top: 28px;
+  margin-top: 30px;
   border-bottom: 4px solid $accent-color;
   border-radius: 2px;
 }
@@ -47,19 +29,16 @@
   display: flex;
   padding-top: 32px;
 }
-.header-list-item:not(:last-child) {
-  margin-right: 50px;
-}
 .connect-header {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.333;
   letter-spacing: 0.02em;
   color: $primary-text-color;
-}
-.connect-header:hover,
-.connect-header:focus {
-  color: $accent-color;
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 .header-adress {
   display: flex;
