--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,10 @@
 @import "./utils/variables";
 @import "./base/base";
 @import "./base/container";
+@import "./components/title";
+@import "./components/description";
+@import "./components/links";
+@import "./components/buttons";
 
 @import "./layout/header";
 @import "./layout/hero";
