--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,34 +1,47 @@
 /*----------beackdrop----------*/
 .backdrop {
   position: fixed;
-  top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-  opacity: 1;
-  transition: all 0.8s ease 0s;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: all 1s ease;
+  transition-delay: 0s;
+}
+.backdrop-container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow: hidden auto;
+  padding: 20px 0;
+  display: flex;
 }
 .backdrop.is-hidden {
   opacity: 0;
-  pointer-events: none;
+  visibility: hidden;
+  transition-delay: 1s;
 }
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.1);
+.is-hidden .modal {
+  transform: translateY(-200%) scale(0.4);
+  transition-delay: 0s;
 }
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 528px;
+  max-width: 528px;
+  width: 100%;
   min-height: 581px;
+  position: relative;
+  background-color: #fff;
+  margin: auto;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: translate(-50%, -50%) scale(1);
-  transition: 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  transition: all 0.4s ease;
+  transform: translateY(0) scale(1);
+  transition-delay: 1s;
 }
 .btn-backdrop {
   position: absolute;
@@ -137,7 +150,7 @@
 }
 .is-hiden {
   position: absolute !important;
-  clip: rect(1px 1px 1px 1px); 
+  clip: rect(1px 1px 1px 1px);
   clip: rect(1px, 1px, 1px, 1px);
   padding: 0 !important;
   border: 0 !important;
