--- a/css/main.css
+++ b/css/main.css
@@ -382,263 +382,6 @@ button {
   margin: auto;
 }
 
-.hero-title {
-  font-weight: 700;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-  text-transform: uppercase;
-  margin: 0;
-  margin-bottom: 30px;
-}
-
-.advantages-title {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
-
-.list-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  color: #212121;
-  text-transform: uppercase;
-  margin: 0;
-  margin-bottom: 10px;
-}
-
-.section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-  margin: 0;
-  margin-bottom: 50px;
-  padding-top: 94px;
-}
-
-.name-title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-  margin: 0;
-  margin-top: 30px;
-  margin-bottom: 10px;
-}
-
-.portfolio-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: #212121;
-  margin: 0;
-  padding-top: 20px;
-  margin-bottom: 4px;
-}
-
-.footer-list-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin-bottom: 20px;
-  padding-top: 72px;
-}
-
-.list-deskription {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-
-.portfolio-deskription {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-}
-
-.link-logotipe {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.192;
-  letter-spacing: 0.03em;
-  color: #212121;
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 93px;
-}
-
-.link-header {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.333;
-  letter-spacing: 0.02em;
-  color: #212121;
-}
-
-.link-header:hover, .link-header:focus {
-  color: #2196f3;
-}
-
-.doing-text-link {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  background: rgba(47, 48, 58, 0.8);
-  padding-top: 27px;
-  padding-bottom: 27px;
-}
-
-.link-block {
-  position: relative;
-}
-
-.link-block .doing-text-link {
-  position: absolute;
-  bottom: 0;
-  margin: 0;
-  width: 100%;
-}
-
-.social-list-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: "";
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  color: #afb1b8;
-}
-
-.social-list-link:hover, .social-list-link:focus {
-  color: #ffffff;
-  background-color: #2196f3;
-}
-
-.clients-list-link {
-  display: inline-block;
-  width: 170px;
-  height: 90px;
-  border: 1px solid #afb1b8;
-  box-sizing: border-box;
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #afb1b8;
-}
-
-.clients-list-link:hover, .clients-list-link:focus {
-  color: #2196f3;
-  border-color: #2196f3;
-}
-
-.link-logotipe-footer {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.192;
-  letter-spacing: 0.03em;
-  color: #212121;
-  padding-top: 60px;
-  margin-bottom: 20px;
-}
-
-.footer-social-list-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: "";
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.1);
-}
-
-.footer-social-list-link:hover, .footer-social-list-link:focus {
-  background-color: #2196f3;
-}
-
-.hero-btn {
-  width: 200px;
-  height: 50px;
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  outline: none;
-}
-
-.text-btn {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-}
-
-.btn-portfolio {
-  background: #f5f4fa;
-  border-radius: 4px;
-  border: none;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-  padding: 6px 22px;
-}
-
-.btn-portfolio:hover, .btn-portfolio:focus {
-  color: #ffffff;
-  background-color: #2196f3;
-}
-
-.hero-btn {
-  width: 200px;
-  height: 50px;
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  outline: none;
-}
-
-.text-btn {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-}
-
 /*----------header----------*/
 .header {
   background-color: #fff;
@@ -706,7 +449,43 @@ button {
   margin-right: 10px;
 }
 
+.link-logotipe {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  margin-right: 93px;
+}
+
+.link-header {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.333;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.link-header:hover, .link-header:focus {
+  color: #2196f3;
+}
+
 /*----------hero----------*/
+.hero-title {
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
 .hero-section {
   max-width: 1600px;
   height: 600px;
@@ -724,11 +503,59 @@ button {
   margin: 0 auto;
 }
 
+.hero-btn {
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  outline: none;
+}
+
+.text-btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+
 /*----------Advantages----------*/
+.advantages-title {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+.list-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: #212121;
+  text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
 .advantages-list {
   display: flex;
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.list-deskription {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .advantages-list-item::before {
@@ -764,6 +591,18 @@ button {
 }
 
 /*----------What we are doing----------*/
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin: 0;
+  margin-bottom: 50px;
+  padding-top: 94px;
+}
+
 .doing-list {
   padding-bottom: 94px;
   display: flex;
@@ -778,9 +617,45 @@ button {
   margin-right: 30px;
 }
 
+.doing-text-link {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  background: rgba(47, 48, 58, 0.8);
+  padding-top: 27px;
+  padding-bottom: 27px;
+}
+
+.link-block {
+  position: relative;
+}
+
+.link-block .doing-text-link {
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+  width: 100%;
+}
+
 /*----------our comand----------*/
 .comand-section {
   background-color: #f5f4fa;
+}
+
+.name-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin: 0;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 .comand-list {
@@ -816,6 +691,22 @@ button {
   margin: 0 30px;
 }
 
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  content: "";
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: #afb1b8;
+}
+
+.social-list-link:hover, .social-list-link:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
 .icon-social {
   fill: currentColor;
 }
@@ -832,6 +723,24 @@ button {
 
 .icon-clients {
   fill: currentColor;
+}
+
+.clients-list-link {
+  display: inline-block;
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #afb1b8;
+}
+
+.clients-list-link:hover, .clients-list-link:focus {
+  color: #2196f3;
+  border-color: #2196f3;
 }
 
 /*----------beackdrop----------*/
@@ -1041,6 +950,17 @@ button {
   background-color: #2f303a;
 }
 
+.link-logotipe-footer {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding-top: 60px;
+  margin-bottom: 20px;
+}
+
 .footer-logo {
   color: #ffffff;
 }
@@ -1091,6 +1011,17 @@ button {
   margin-right: 10px;
 }
 
+.footer-list-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+  padding-top: 72px;
+}
+
 .icon-footer-social {
   fill: #ffffff;
 }
@@ -1121,7 +1052,53 @@ button {
   margin-left: 10px;
 }
 
+.hero-btnf {
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  outline: none;
+}
+
+.text-btnf {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+
+.portfolio-action:after {
+  display: flex;
+  content: "";
+  display: block;
+  background-image: url(./svg/sprite.svg#icon-leter-footer);
+  width: 24px;
+  height: 24px;
+  fill: #ffffff;
+  margin-left: 10px;
+}
+
 .position-footer-btn {
   position: absolute;
+}
+
+.footer-social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  content: "";
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.footer-social-list-link:hover, .footer-social-list-link:focus {
+  background-color: #2196f3;
 }
 /*# sourceMappingURL=main.css.map */
