--- a/sass/layout/_cards.scss
+++ b/sass/layout/_cards.scss
@@ -3,6 +3,22 @@
   display: flex;
   flex-wrap: wrap;
 }
+.portfolio-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: $title-text-color;
+  margin: 0;
+  padding-top: 20px;
+  margin-bottom: 4px;
+}
+.portfolio-deskription {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+}
 .portfolio-list-item {
   width: 370px;
   height: 404px;
