--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,6 +2,16 @@
 .footer {
   background-color: #2f303a;
 }
+.link-logotipe-footer {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+  color: $title-text-color;
+  padding-top: 60px;
+  margin-bottom: 20px;
+}
 .footer-logo {
   color: $primary-white-color;
 }
@@ -42,7 +52,16 @@
 .footer-social-list-item:not(:last-child) {
   margin-right: 10px;
 }
-
+.footer-list-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: $primary-white-color;
+  margin-bottom: 20px;
+  padding-top: 72px;
+}
 .icon-footer-social {
   fill: $primary-white-color;
 }
@@ -69,6 +88,48 @@
   fill: $primary-white-color;
   margin-left: 10px;
 }
+.hero-btnf {
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  height: 50px;
+  background: $accent-color;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  outline: none;
+}
+.text-btnf {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: $primary-white-color;
+}
+.portfolio-action:after {
+  display: flex;
+  content: "";
+  display: block;
+  background-image: url(./svg/sprite.svg#icon-leter-footer);
+  width: 24px;
+  height: 24px;
+  fill: $primary-white-color;
+  margin-left: 10px;
+}
 .position-footer-btn {
   position: absolute;
+}
+.footer-social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  content: "";
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
 }
