--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,4 +1,15 @@
 /*----------hero----------*/
+.hero-title {
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: $primary-white-color;
+  text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 30px;
+}
 .hero-section {
   max-width: 1600px;
   height: 600px;
@@ -19,4 +30,19 @@
   width: 696px;
   margin: 0 auto;
 }
-
+.hero-btn {
+  width: 200px;
+  height: 50px;
+  background: $accent-color;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  outline: none;
+}
+.text-btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: $primary-white-color;
+}
