--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -106,18 +106,11 @@
   letter-spacing: 0.06em;
   color: $primary-white-color;
 }
-.portfolio-action:after {
-  display: flex;
-  content: "";
-  display: block;
-  background-image: url(./svg/sprite.svg#icon-leter-footer);
+.icon-footer-btn {
   width: 24px;
   height: 24px;
   fill: $primary-white-color;
   margin-left: 10px;
-}
-.position-footer-btn {
-  position: absolute;
 }
 .footer-social-list-link {
   display: flex;
