--- a/css/main.css
+++ b/css/main.css
@@ -382,6 +382,203 @@ button {
   margin: auto;
 }
 
+.backdrop {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: all 1s ease;
+  transition-delay: 0s;
+}
+
+.backdrop-container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow: hidden auto;
+  padding: 20px 0;
+  display: flex;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition-delay: 1s;
+}
+
+.is-hidden .modal {
+  transform: translateY(-200%) scale(0.1);
+  transition-delay: 0s;
+}
+
+.modal {
+  max-width: 528px;
+  min-height: 581px;
+  width: 100%;
+  position: relative;
+  background-color: #fff;
+  margin: auto;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: all 0.4s ease;
+  transform: translateY(0) scale(1);
+  transition-delay: 500ms;
+}
+
+.btn-backdrop {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  box-sizing: border-box;
+  outline: none;
+}
+
+.btn-backdrop:focus, .btn-backdrop:hover {
+  color: #2196f3;
+}
+
+.icon-backdrop {
+  width: 11px;
+  height: 11px;
+}
+
+.icon-backdrop:hover, .icon-backdrop:focus {
+  fill: currentColor;
+}
+
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding-top: 40px;
+  margin-bottom: 30px;
+}
+
+.modal-label {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.67;
+  letter-spacing: 0.01em;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding-left: 42px;
+  outline: none;
+}
+
+.modal-input:focus, .modal-input:hover {
+  border-color: #2196f3;
+}
+
+.modal-input:focus ~ .icon-modal,
+.modal-input:hover ~ .icon-modal {
+  fill: #2196f3;
+}
+
+.modal-text {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  resize: none;
+  padding: 12px 16px;
+  outline: none;
+}
+
+.modal-text:focus, .modal-text:hover {
+  border-color: #2196f3;
+}
+
+.modal-link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+}
+
+.checkbox {
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.checkbox:before {
+  display: block;
+  content: "";
+  width: 16px;
+  height: 15px;
+  background-color: #ffffff;
+  border: 1px solid #2196f3;
+  border-radius: 2px;
+  margin-right: 7px;
+}
+
+.input-checkbox:checked + .checkbox::before {
+  background-color: #2196f3;
+}
+
+.icon-checkbox {
+  position: absolute;
+  top: 7px;
+  left: 2px;
+  fill: #ffffff;
+}
+
+.is-hiden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+.icon-modal {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
+.modal-box {
+  position: relative;
+  margin-bottom: 28px;
+  margin-left: 41px;
+  margin-right: 39px;
+}
+
+.modal-end-block {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 40px;
+}
+
 /*----------header----------*/
 .header {
   background-color: #fff;
@@ -521,7 +718,6 @@ button {
   color: #ffffff;
 }
 
-/*----------Advantages----------*/
 .advantages-title {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -571,19 +767,19 @@ button {
 }
 
 .icon-first::before {
-  background-image: url(../svg/advantages-svg/Group.svg);
+  background-image: url(../image/svg/advantages-svg/Group.svg);
 }
 
 .icon-second:before {
-  background-image: url(../svg/advantages-svg/clock.svg);
+  background-image: url(../image/svg/advantages-svg/clock.svg);
 }
 
 .icon-third:before {
-  background-image: url(../svg/advantages-svg/diagram.svg);
+  background-image: url(../image/svg/advantages-svg/diagram.svg);
 }
 
 .icon-fourth:before {
-  background-image: url(../svg/advantages-svg/astronaut.svg);
+  background-image: url(../image/svg/advantages-svg/astronaut.svg);
 }
 
 .advantages-list-item:not(:last-child) {
@@ -743,208 +939,6 @@ button {
   border-color: #2196f3;
 }
 
-/*----------beackdrop----------*/
-.backdrop {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: all 1s ease;
-  transition-delay: 0s;
-}
-
-.backdrop-container {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  overflow: hidden auto;
-  padding: 20px 0;
-  display: flex;
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  transition-delay: 1s;
-}
-
-.is-hidden .modal {
-  transform: translateY(-200%) scale(0.4);
-  transition-delay: 0s;
-}
-
-.modal {
-  max-width: 528px;
-  width: 100%;
-  min-height: 581px;
-  position: relative;
-  background-color: #fff;
-  margin: auto;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  transition: all 0.4s ease;
-  transform: translateY(0) scale(1);
-  transition-delay: 1s;
-}
-
-.btn-backdrop {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  box-sizing: border-box;
-  outline: none;
-}
-
-.btn-backdrop:focus,
-.btn-backdrop:hover {
-  color: #2196f3;
-}
-
-.icon-backdrop {
-  width: 11px;
-  height: 11px;
-}
-
-.icon-backdrop:hover,
-.icon-backdrop:focus {
-  fill: currentColor;
-}
-
-.modal-title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-  padding-top: 40px;
-  margin-bottom: 30px;
-}
-
-.modal-label {
-  position: absolute;
-  top: -20px;
-  left: 0;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.67;
-  letter-spacing: 0.01em;
-}
-
-.modal-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding-left: 42px;
-  outline: none;
-}
-
-.modal-input:focus,
-.modal-input:hover {
-  border-color: #2196f3;
-}
-
-.modal-input:focus ~ .icon-modal,
-.modal-input:hover ~ .icon-modal {
-  fill: #2196f3;
-}
-
-.modal-text {
-  width: 100%;
-  height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  resize: none;
-  padding: 12px 16px;
-  outline: none;
-}
-
-.modal-text:focus,
-.modal-text:hover {
-  border-color: #2196f3;
-}
-
-.modal-link {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #2196f3;
-}
-
-.checkbox {
-  text-align: center;
-  display: flex;
-  align-items: center;
-}
-
-.input-checkbox:checked + .checkbox::before {
-  background-color: #2196f3;
-}
-
-.checkbox::before {
-  display: block;
-  content: "";
-  width: 16px;
-  height: 15px;
-  background-color: #ffffff;
-  border: 1px solid #2196f3;
-  border-radius: 2px;
-  margin-right: 7px;
-}
-
-.icon-checkbox {
-  position: absolute;
-  top: 7px;
-  left: 2px;
-  fill: #ffffff;
-}
-
-.is-hiden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
-
-.icon-modal {
-  position: absolute;
-  top: 50%;
-  left: 15px;
-  transform: translateY(-50%);
-  pointer-events: none;
-}
-
-.modal-box {
-  position: relative;
-  margin-bottom: 28px;
-  margin-left: 41px;
-  margin-right: 39px;
-}
-
-.modal-end-block {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 40px;
-}
-
 /*----------footer----------*/
 .footer {
   background-color: #2f303a;
@@ -1072,19 +1066,11 @@ button {
   color: #ffffff;
 }
 
-.portfolio-action:after {
-  display: flex;
-  content: "";
-  display: block;
-  background-image: url(./svg/sprite.svg#icon-leter-footer);
+.icon-footer-btn {
   width: 24px;
   height: 24px;
   fill: #ffffff;
   margin-left: 10px;
-}
-
-.position-footer-btn {
-  position: absolute;
 }
 
 .footer-social-list-link {
