--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,4 +1,4 @@
-/*----------beackdrop----------*/
+
 .backdrop {
   position: fixed;
   left: 0;
@@ -9,6 +9,7 @@
   transition: all 1s ease;
   transition-delay: 0s;
 }
+
 .backdrop-container {
   position: absolute;
   left: 0;
@@ -19,19 +20,22 @@
   padding: 20px 0;
   display: flex;
 }
+
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   transition-delay: 1s;
 }
+
 .is-hidden .modal {
-  transform: translateY(-200%) scale(0.4);
+  transform: translateY(-200%) scale(0.1);
   transition-delay: 0s;
 }
+
 .modal {
   max-width: 528px;
-  width: 100%;
   min-height: 581px;
+  width: 100%;
   position: relative;
   background-color: #fff;
   margin: auto;
@@ -41,8 +45,9 @@
   border-radius: 4px;
   transition: all 0.4s ease;
   transform: translateY(0) scale(1);
-  transition-delay: 1s;
+  transition-delay: 500ms;
 }
+
 .btn-backdrop {
   position: absolute;
   top: 8px;
@@ -54,19 +59,22 @@
   border-radius: 50%;
   box-sizing: border-box;
   outline: none;
+  &:focus,
+  &:hover {
+    color: $accent-color;
+  }
 }
-.btn-backdrop:focus,
-.btn-backdrop:hover {
-  color: $accent-color;
-}
+
 .icon-backdrop {
   width: 11px;
   height: 11px;
+  &:hover,
+  &:focus {
+    fill: currentColor;
+  }
 }
-.icon-backdrop:hover,
-.icon-backdrop:focus {
-  fill: currentColor;
-}
+
+
 .modal-title {
   font-weight: 700;
   font-size: 20px;
@@ -77,6 +85,7 @@
   padding-top: 40px;
   margin-bottom: 30px;
 }
+
 .modal-label {
   position: absolute;
   top: -20px;
@@ -94,15 +103,16 @@
   border-radius: 4px;
   padding-left: 42px;
   outline: none;
+  &:focus,
+  &:hover {
+    border-color: $accent-color;
+  }
+  &:focus ~ .icon-modal,
+  &:hover ~ .icon-modal {
+    fill: $accent-color;
+  }
 }
-.modal-input:focus,
-.modal-input:hover {
-  border-color: $accent-color;
-}
-.modal-input:focus ~ .icon-modal,
-.modal-input:hover ~ .icon-modal {
-  fill: $accent-color;
-}
+
 .modal-text {
   width: 100%;
   height: 120px;
@@ -112,11 +122,13 @@
   resize: none;
   padding: 12px 16px;
   outline: none;
+  &:focus,
+  &:hover {
+    border-color: $accent-color;
+  }
 }
-.modal-text:focus,
-.modal-text:hover {
-  border-color: $accent-color;
-}
+
+
 .modal-link {
   font-weight: 400;
   font-size: 14px;
@@ -124,15 +136,12 @@
   letter-spacing: 0.03em;
   color: $accent-color;
 }
+
 .checkbox {
   text-align: center;
   display: flex;
   align-items: center;
-}
-.input-checkbox:checked + .checkbox::before {
-  background-color: $accent-color;
-}
-.checkbox::before {
+  &:before {
   display: block;
   content: "";
   width: 16px;
@@ -142,12 +151,19 @@
   border-radius: 2px;
   margin-right: 7px;
 }
+}
+
+.input-checkbox:checked + .checkbox::before {
+  background-color: $accent-color;
+}
+
 .icon-checkbox {
   position: absolute;
   top: 7px;
   left: 2px;
   fill: $primary-white-color;
 }
+
 .is-hiden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -158,6 +174,7 @@
   width: 1px !important;
   overflow: hidden;
 }
+
 .icon-modal {
   position: absolute;
   top: 50%;
@@ -165,12 +182,14 @@
   transform: translateY(-50%);
   pointer-events: none;
 }
+
 .modal-box {
   position: relative;
   margin-bottom: 28px;
   margin-left: 41px;
   margin-right: 39px;
 }
+
 .modal-end-block {
   display: flex;
   justify-content: center;
