--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,8 @@
-/*----------footer----------*/
+
 .footer {
   background-color: #2f303a;
 }
+
 .link-logotipe-footer {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -12,22 +13,28 @@
   padding-top: 60px;
   margin-bottom: 20px;
 }
+
 .footer-logo {
   color: $primary-white-color;
 }
+
 .footer-block {
   display: flex;
 }
+
 .address-footer {
   display: flex;
   flex-direction: column;
 }
+
 .footer-list-item:not(:last-child) {
   margin-bottom: 9px;
 }
+
 .footer-list-item:last-child {
   padding-bottom: 60px;
 }
+
 .connect-footer {
   font-weight: 400;
   font-size: 14px;
@@ -35,6 +42,7 @@
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+
 .adress {
   font-weight: 400;
   font-size: 14px;
@@ -42,16 +50,20 @@
   letter-spacing: 0.03em;
   color: #ffffff;
 }
+
 .join {
   padding-bottom: 100px;
   margin-left: 70px;
 }
+
 .footer-social-list {
   display: flex;
 }
+
 .footer-social-list-item:not(:last-child) {
   margin-right: 10px;
 }
+
 .footer-list-title {
   font-weight: 700;
   font-size: 14px;
@@ -62,12 +74,15 @@
   margin-bottom: 20px;
   padding-top: 72px;
 }
+
 .icon-footer-social {
   fill: $primary-white-color;
 }
+
 .mailing-btn {
   margin-left: 93px;
 }
+
 .mailing-mesage {
   width: 358px;
   height: 50px;
@@ -82,12 +97,14 @@
   color: $primary-white-color;
   margin-right: 12px;
 }
+
 .icon-footer-btn {
   width: 24px;
   height: 24px;
   fill: $primary-white-color;
   margin-left: 10px;
 }
+
 .hero-btnf {
   display: flex;
   justify-content: center;
@@ -99,6 +116,7 @@
   border: none;
   outline: none;
 }
+
 .text-btnf {
   font-weight: 700;
   font-size: 16px;
@@ -106,12 +124,14 @@
   letter-spacing: 0.06em;
   color: $primary-white-color;
 }
+
 .icon-footer-btn {
   width: 24px;
   height: 24px;
   fill: $primary-white-color;
   margin-left: 10px;
 }
+
 .footer-social-list-link {
   display: flex;
   justify-content: center;
@@ -125,4 +145,16 @@
   &:focus {
     background-color: $accent-color;
   }
+}
+.mailing-btn {
+  display: flex;
+}
+.container-btn-footer {
+  padding-top: 108px;
+  padding-bottom: 94px;
+}
+.position-footer-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
