--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -5,7 +5,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   transition: all 1s ease;
   transition-delay: 0s;
 }
@@ -28,7 +28,7 @@
 }
 
 .is-hidden .modal {
-  transform: translateY(-200%) scale(0.1);
+  transform: translateX(-200%) scale(0.1);
   transition-delay: 0s;
 }
 
@@ -36,9 +36,9 @@
   max-width: 528px;
   min-height: 581px;
   width: 100%;
+  margin: auto;
   position: relative;
   background-color: #fff;
-  margin: auto;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
