--- a/sass/layout/_cards.scss
+++ b/sass/layout/_cards.scss
@@ -1,8 +1,9 @@
-/*----------cards----------*/
+
 .potfolio-list {
   display: flex;
   flex-wrap: wrap;
 }
+
 .portfolio-title {
   font-weight: 700;
   font-size: 18px;
@@ -13,30 +14,37 @@
   padding-top: 20px;
   margin-bottom: 4px;
 }
+
 .portfolio-deskription {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
 }
+
 .portfolio-list-item {
   width: 370px;
   height: 404px;
 }
-.portfolio-list-item:not(:nth-child(3n)) {
+.p
+ortfolio-list-item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
+
 .portfolio-list-item:nth-last-child(-n + 3) {
   margin-bottom: 94px;
 }
+
 .portfolio-list-item:not(:nth-child(-n + 3)) {
   margin-top: 30px;
 }
+
 .portfolio-list-item:hover,
 .portfolio-list-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
 .portfolio-border {
   background: #ffffff;
   border: 1px solid #eeeeee;
@@ -44,6 +52,7 @@
   padding-bottom: 20px;
   border-top: none;
 }
+
 .overlay-text {
   font-weight: 400;
   font-size: 18px;
@@ -51,6 +60,7 @@
   letter-spacing: 0.03em;
   color: $primary-white-color;
 }
+
 .cards-block {
   position: relative;
   overflow: hidden;
@@ -58,6 +68,7 @@
     transform: translatex(0);
   }
 }
+
 .overlay {
   display: flex;
   align-items: center;
