--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,7 +12,7 @@
 }
 
 .hero-section {
-  max-width: 1600px;
+  width: 1600px;
   height: 600px;
   background-image: linear-gradient(
       to right,
@@ -23,17 +23,22 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin: 0 auto;
   display: flex;
+}
+.hero-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-block {
-  text-align: center;
   width: 696px;
   margin: 0 auto;
 }
 
 .hero-btn {
+  display: block;
+  margin: 0 auto;
   width: 200px;
   height: 50px;
   background: $accent-color;
